--- a/sass/modelbrouwers-subsilver/theme/partials/_colours.scss
+++ b/sass/modelbrouwers-subsilver/theme/partials/_colours.scss
@@ -60,8 +60,6 @@ hr {
 }
 
 .forumbg {
-    background-color: #ececec;
-    background-image: url("./images/bg_list.gif");
     border: 1px solid #a9b8c2;
 }
 
